--- a/prueba.html
+++ b/prueba.html
@@ -15,7 +15,7 @@ xhr.addEventListener("readystatechange", function() {
   }
 });
 
-xhr.open("POST", "https://sistemas.pnc.gob.gt/escritorio/index.php?r=vehiculos/Respuesta_placa");
+xhr.open("POST", "");
 xhr.setRequestHeader("Cookie", "PHPSESSID=p5jg7prtu1efp5ak79h61cgnt7");
 
 xhr.send(data);
